[package]
name = "copybin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = "1.19.2"
mongodb = "2.2.2"
rocket = "0.5.0-rc.2"

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["mongodb"]